	* src/resources/iteminfo.cpp, src/resources/iteminfo.h,
	src/resources/itemdb.cpp, data/items.xml: Merged weapon_type and
	attacktype field.
	* src/resources/iteminfo.h, src/resources/itemdb.cpp: Removed unused
	slot field.
	* src/resources/itemdb.cpp: Added automatic generation of description
	strings for item effects.
	* po/POTFILES.in: Marked effect strings as translatable.

2007-10-15  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/viewport.h, src/gui/viewport.cpp: Put drawing of debug path
	into a private method.
	* po/LINGUAS, po/nl.po: Added Dutch translation (incomplete).

2007-10-07  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/maps/new_18-1.tmx: Fixed some collision layer problems.

2007-10-01  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/item.cpp, src/gui/itemcontainer.cpp, src/resources/itemdb.cpp:
	Fixed inventory display so that empty slots are not unknown items.
	Adjusted "type" meaning to tmwserv one.
	* src/game.cpp: Fixed attacking with keyboard.

2007-09-30  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/desert_x3.png: Removed the purple line from the
	ruin tile.

2007-09-27  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/desert2.png, data/graphics/tiles/desert_x3.png,
	data/graphics/tiles/desert_x5.png: Added new desert tiles by Len.

2007-09-25  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/gui/browserbox.cpp: Fix wrapping of UTF-8 multi-byte characters.

2007-09-25  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/inventory.h, src/inventory.cpp: Added some const qualifiers.

2007-09-22  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/browserbox.cpp: Removed some useless things.
	* src/logindata.h, src/gui/linkhandler.h, src/channelmanager.h,
	src/channelmanager.cpp, src/utils/minmax.h: Fixed missing includes and
	cleaned a bit.

2007-09-21  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/chat.cpp: Fixed resizing of chat window.
